# nr-ai-form

./: .gitignore  CLAUDE.md  README.md  bash.exe.stackdump  index.html  package-lock.json  package.json
agentic_ai_backend/: .dockerignore  README.md  docker-compose.yaml  pyproject.toml
agentic_ai_backend/agents/conversationagent/: .sampleenv  Dockerfile  README.md  conversation_agent_a2a_server.py  conversationagent.py  pyproject.toml
agentic_ai_backend/agents/conversationagent/agentmanifest/: manifest.json
agentic_ai_backend/agents/conversationagent/models/: conversationmodel.py
agentic_ai_backend/agents/conversationagent/prompttemplates-local/: instructions.md
agentic_ai_backend/agents/formsupportagent/: .sampleenv  Dockerfile  FORM_AGENT_GUIDE.md  README.md  formsupport_agent_a2a_server.py  formsupportagent.py  pyproject.toml  test_websocket.html  verify_bridge.py  websocket_api.py
agentic_ai_backend/agents/formsupportagent/agentinstructions-fish/: instructions.md
agentic_ai_backend/agents/formsupportagent/agentinstructions-local/: instructions.md
agentic_ai_backend/agents/formsupportagent/agentmanifest/: manifest.json
agentic_ai_backend/agents/formsupportagent/formdefinitions/: step0-Bot.json  step1-Introduction.json  step10-Complete.json  step2-Eligibility.json  step2.json  step3-Add-Surface-Water-Source.json  step3-Add-Well.json  step3-AddPurpose-Conservation.json  step3-AddPurpose-Consolidated.json  step3-AddPurpose-Domestic.json  step3-AddPurpose-Industrial-Livestock.json  step3-Dam-Reservoir-Add-Individual-Mailing-Address.json  step3-Dam-Reservoir-Add-Individual.json  step3-Dam-Reservoir-Add-Organization-Mailing-Address.json  step3-Dam-Reservoir-Add-Organization.json  step3-Dam-Reservoir-Contact-Address.json  step3-Technical-Information-Add-Well.json  step3-Technical-Information-Dam-Reservoir.json  step3-Technical-Information-Fee-Exemption-Request.json  step3-Technical-Information-Joint-Works.json  step3-Technical-Information-Land-Tenure-Option.json  step3-Technical-Information-Other-Authorizations.json  step3-Technical-Information-Source-of-Water-for-Application.json  step3-Technical-Information-Water-Diversion.json  step3-Technical-Information-Works.json  step3-Well-Upload-Well-Construction-Report.json  step4-Location-Land-Details-Other.json  step4-Location-Land-Details-Private-Land.json  step4-Location-Land-Details-Provincial-Crown-Land.json  step4-Location-Land-Details.json  step4-Location-Map-Files-Multi-File-Upload.json  step4-Location-Other-Affected-Lands-Other.json  step4-Location-Other-Affected-Lands-Private-Land.json  step4-Location-Other-Affected-Lands-Provincial-Crown-Land.json  step4-Location-Other-Affected-Lands.json  step4-Location-Spatial-Files-Multi-File-Upload.json  step4-Location.json  step4-Location_consolidated.json  step5-Document-Upload.json  step5-File-Upload.json  (+11 more)
agentic_ai_backend/agents/formsupportagent/formdefinitions-fish/: step0.json
agentic_ai_backend/agents/formsupportagent/local_mcp/: __init__.py
agentic_ai_backend/agents/formsupportagent/models/: formsupportmodel.py
agentic_ai_backend/agents/formsupportagent/prompttemplates/: step0-Bot.md  step1-Introduction.md  step10-Complete.md  step2-Eligibility.md  step3-Add-Surface-Water-Source.md  step3-Add-Well.md  step3-AddPurpose-Conservation.md  step3-AddPurpose-Consolidated.md  step3-AddPurpose-Domestic.md  step3-AddPurpose-Industrial-Livestock.md  step3-Dam-Reservoir-Add-Individual-Mailing-Address.md  step3-Dam-Reservoir-Add-Individual.md  step3-Dam-Reservoir-Add-Organization-Mailing-Address.md  step3-Technical-Information-Add-Well.md  step3-Technical-Information-Dam-Reservoir.md  step3-Technical-Information-Fee-Exemption-Request.md  step3-Technical-Information-Joint-Works.md  step3-Technical-Information-Land-Tenure-Option.md  step3-Technical-Information-Other-Authorizations.md  step3-Technical-Information-Source-of-Water-for-Application.md  step3-Technical-Information-Water-Diversion.md  step3-Technical-Information-Works.md  step3-Well-Upload-Well-Construction-Report.md  step4-Location-Land-Details-Private-Land.md  step4-Location-Land-Details.md  step4-Location-Map-Files-Multi-File-Upload.md  step4-Location-Other-Affected-Lands-Private-Land.md  step4-Location-Other-Affected-Lands.md  step4-Location.md  (+16 more)
agentic_ai_backend/agents/formsupportagent/prompttemplates-fish/: step0.md
agentic_ai_backend/agents/orchestrators/: .sampleenv  Dockerfile  README.md  orchestrator_agent_server.py  orchestratoragent.py  pyproject.toml
agentic_ai_backend/agents/tools/: azure_ai_search.py
agentic_ai_backend/api/: .env.example  .sampleenv  Dockerfile  auth_middleware.py  main.py  pyproject.toml
agentic_ai_backend/api_backend/: Dockerfile  api_backend_server.py  pyproject.toml  websocket_api-2.py
agentic_ai_backend/api_backend/frontend/: client.js
agentic_ai_backend/api_backend/threadmanagement/: thread_manager_interface.py
agentic_ai_backend/automationtests/: adhoc.csv  comments.csv  dummy.csv  id.csv  run_automation.py  ss.csv  step3.csv  step4.csv  testscripts1-randomJointworkqueries.csv  testscripts1.csv  urls.csv
agentic_ai_backend/documentations/design_architecture/: Technical Design CSS AI.html
agentic_ai_backend/openshift/: README.md  conversation-agent-deploy.yaml  conversation-agent.yaml  formsupport-agent-deploy.yaml  formsupport-agent.yaml  orchestrator-agent-deploy.yaml  orchestrator-agent.yaml
agentic_ai_backend/utils/: blobservice.py  cosmosdbservice.py  formutils.py  pyproject.toml  redisservice.py
agentic_ai_backend/utils/threadmanagement/: cosmosdbutils.py  redisdbutils.py
evaluation/: .env.example  README.md  pyproject.toml
evaluation/data/: context.json  test_cases.json
evaluation/results/: eval_20260614_140321.json  eval_20260614_140645.json  eval_20260614_141122.json  eval_20260614_142018.json  eval_20260614_142246.json  eval_20260614_143018.json  eval_20260614_151713.json  eval_20260614_151947.json
evaluation/src/: __main__.py  client.py  config.py  main.py
evaluation/src/evaluators/: __init__.py  base.py  groundedness.py
(+259 files in other folders)
