[project]
name = "agentic-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework-core>=1.0.0b251211",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.27.1",
    "python-dotenv>=1.2.1",
]

