[project]
name = "ai-evaluation"
version = "0.1.0"
description = "Evaluation suite for NR AI Agentic Backend using Azure AI Evaluation SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-evaluation>=0.1.0",
    "openai>=1.99.3",
    "python-dotenv>=1.1.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evaluation"]
