[project]
name = "utils"
version = "0.1.1"
description = "Shared utility functions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob==12.27.1",
    "azure-cosmos==4.9.0",
    "redis==5.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]
package-dir = {"utils" = "."}
