[project]
name = "utils"
version = "0.1.1"
description = "Shared utility functions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob==12.28.0",
    "azure-cosmos==4.15.0",
    "redis==7.4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils"]
package-dir = {"utils" = "."}
