[project]
name = "conversationagent"
version = "0.1.0"
description = "NR Sector CSS AI Conversation Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework-core==1.3.0",
    "agent-framework-openai==1.3.0",
    "azure-search-documents==12.0.0",
    "azure-storage-blob==12.28.0",
    "fastapi==0.135.3",
    "python-dotenv==1.2.2",
    "uvicorn==0.44.0",
]

