[project]
name = "formsupportagent"
version = "0.1.0"
description = "NR Sector CSS AI Form Support Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework-core==1.0.1",
    "agent-framework-openai==1.0.1",
    "azure-storage-blob==12.28.0",
    "python-dotenv==1.2.2",
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "mcp==1.27.0",
    "utils",
 
]

[tool.uv.sources]
utils = { path = "../../utils" }

