[project]
name = "orchestrators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
 "agent-framework-core==1.0.0b251211", # use this fixed version for MAF, since higher versions need code refactoring.
 "opentelemetry-semantic-conventions-ai==0.4.13", #this is temporarily added for MAF, remove once MAF goes to GA
 "azure-core==1.37.0",
 "azure-search-documents==11.6.0",
 "aiohttp==3.13.3",
 "python-dotenv==1.2.1",
 "fastapi==0.127.0",
 "uvicorn==0.38.0",
 "utils",
 "azure-cosmos==4.9.0",
 "debugpy==1.8.20",
]

[tool.uv.sources]
utils = { path = "../../utils" }

[tool.uv]
override-dependencies = ["aiohttp==3.13.3"]
