[project]
name = "orchestrators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
 "agent-framework-core==1.0.1",
 "agent-framework-openai==1.0.1",
 "azure-core==1.39.0",
 "azure-search-documents==11.6.0",
 "aiohttp==3.13.5",
 "python-dotenv==1.2.2",
 "fastapi==0.135.3",
 "uvicorn==0.44.0",
 "azure-monitor-opentelemetry>=1.6.0",
 "utils",
 "azure-cosmos==4.15.0",
 "debugpy==1.8.20",
]

[tool.uv.sources]
utils = { path = "../../utils" }

[tool.uv]
override-dependencies = ["aiohttp==3.13.5"]
